<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RollDiceActivity">

    <ImageView
        android:id="@+id/dice1_image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/empty_dice"
        tools:src="@drawable/dice_1"
        app:layout_constraintRight_toLeftOf="@+id/dice1_image2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/dice2_image1"/>
    <ImageView
        android:id="@+id/dice2_image1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/empty_dice"
        tools:src="@drawable/dice_1"
        app:layout_constraintRight_toLeftOf="@+id/dice2_image2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice1_image1"/>
    <ImageView
        android:id="@+id/dice1_image2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/empty_dice"
        tools:src="@drawable/dice_1"
        app:layout_constraintBottom_toTopOf="@id/dice2_image2"
        app:layout_constraintLeft_toRightOf="@id/dice1_image1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/dice2_image2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/empty_dice"
        tools:src="@drawable/dice_1"
        app:layout_constraintLeft_toRightOf="@id/dice2_image1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice1_image2"/>
    <EditText
        android:id="@+id/target_scor_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/enter_score"
        android:textSize="20sp"
        android:inputType="number"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dice2_image2"/>

    <TextView
        android:id="@+id/player1_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_1"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/target_scor_et"
        app:layout_constraintBottom_toTopOf="@id/start_button"/>
    <TextView
        android:id="@+id/player1_rolls_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_3_rolls"
        android:textSize="16sp"
        android:layout_marginTop="6dp"
        app:layout_constraintLeft_toLeftOf="@id/player1_tv"
        app:layout_constraintTop_toBottomOf="@id/player1_tv" />
    <TextView
        android:id="@+id/player2_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_2"
        android:textSize="20sp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/target_scor_et"
        app:layout_constraintBottom_toTopOf="@id/start_button"/>
    <TextView
        android:id="@+id/player2_rolls_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_3_rolls"
        android:textSize="16sp"
        android:layout_marginTop="6dp"
        app:layout_constraintRight_toRightOf="@id/player2_tv"
        app:layout_constraintTop_toBottomOf="@id/player2_tv" />

    <Button
        android:id="@+id/show_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/show"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/start_button"
        app:layout_constraintLeft_toLeftOf="@id/start_button"
        app:layout_constraintRight_toRightOf="@id/start_button"
        app:layout_constraintBottom_toTopOf="@+id/roll_button"/>
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/start_new_game"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/target_scor_et"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/show_button"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:id="@+id/roll_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/roll_label"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/show_button"
        app:layout_constraintLeft_toLeftOf="@id/show_button"
        app:layout_constraintRight_toRightOf="@id/show_button"/>


</androidx.constraintlayout.widget.ConstraintLayout>